...
        android:text="Event Title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer_bar" />

    <EditText
        android:id="@+id/new_event_title_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="Event Title"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_title"
...
        android:text="Start Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_title"
        app:layout_constraintTop_toBottomOf="@id/new_event_title_e" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_event_start_button"
        android:layout_width="45dp"
        android:layout_height="0sp"
        android:layout_marginStart="10sp"
        android:padding="0sp"
        android:text="Edit"
        android:textSize="12sp"
...
        android:text="End Date/Time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_start_time"
        app:layout_constraintTop_toBottomOf="@id/new_event_start_time_e" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_event_end_button"
        android:layout_width="45dp"
        android:layout_height="0sp"
        android:layout_marginStart="10sp"
        android:padding="0sp"
        android:text="Edit"
        android:textSize="12sp"
...
        android:text="Description"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_end_time"
        app:layout_constraintTop_toBottomOf="@+id/new_event_end_time_e" />

    <EditText
        android:id="@+id/new_event_description_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="Description"
        android:inputType="text"
        android:textSize="15sp"
...
        android:text="Signed Up Attendee Limit"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/new_event_end_time"
        app:layout_constraintTop_toBottomOf="@+id/new_event_description_e" />

    <EditText
        android:id="@+id/new_event_attendee_limit_e"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:hint="0"
        android:inputType="number"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/new_event_attendee_limit_label"
        app:layout_constraintTop_toBottomOf="@id/new_event_attendee_limit_label" />


    <Button
        android:id="@+id/btnCreateNewEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="Create"
        android:textSize="18sp"
...
