...
            android:layout_marginTop="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toggleGeolocationSwitch">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eventsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Events"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...
